--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ packages = find:
 python_requires = >=3.9
 install_requires =
     gym-super-mario-bros
+    gym==0.23.1
     matplotlib
     numpy
     opencv-python
