--- a/setup.cfg
+++ b/setup.cfg
@@ -20,10 +20,11 @@ install_requires =
     gym-super-mario-bros
     gym==0.23.1
     matplotlib
-    numpy
+    numpy==1.23
     opencv-python
     torch
     torchinfo
+    tqdm
 
 [option.packages.find]
 where = src
